shaku_derive/tests/ui/provider_parameters.stderr
error: Parameters are not allowed in Providers
  --> $DIR/provider_parameters.rs:10:5
   |
10 |     value: usize,
   |     ^^^^^
